# crunch

./: .gitignore  Cargo.toml  README.md  cuddle.yaml  perf.data
crates/crunch/: Cargo.toml
crates/crunch-cli/: Cargo.toml
crates/crunch-cli/src/: logging.rs  main.rs
crates/crunch-codegen/: Cargo.toml
crates/crunch-codegen/src/: lib.rs
crates/crunch-envelope/: Cargo.toml  build.rs
crates/crunch-envelope/benches/: envelope_benchmark.rs
crates/crunch-envelope/schemas/: envelope.capnp
crates/crunch-envelope/src/: envelope.proto  envelope_capnp.rs  json_envelope.rs  lib.rs  proto_envelope.rs
crates/crunch-file/: Cargo.toml
crates/crunch-file/src/: lib.rs
crates/crunch-in-memory/: Cargo.toml
crates/crunch-in-memory/src/: lib.rs  persistence.rs  transport.rs
crates/crunch-nats/: Cargo.toml
crates/crunch-nats/src/: lib.rs
crates/crunch-nodata/: Cargo.toml  buf.gen.yaml
crates/crunch-nodata/src/: grpc.rs  lib.rs
crates/crunch-postgres/: Cargo.toml
crates/crunch-postgres/migrations/: 20231003181849_initial.sql
crates/crunch-postgres/src/: lib.rs
crates/crunch-postgres/tests/: new_test.rs  persistence_test.rs
crates/crunch-traits/: Cargo.toml
crates/crunch-traits/src/: errors.rs  lib.rs  transport.rs
crates/crunch/assets/: docker-compose.nats.yaml
crates/crunch/examples/: basic.rs  counter.rs  nats.rs
crates/crunch/src/: errors.rs  impls.rs  lib.rs  main.rs  outbox.rs  persistence.rs  publisher.rs  subscriber.rs  traits.rs  transport.rs
crates/test-bin/: Cargo.toml
crates/test-bin/src/: main.rs
examples/basic-setup/: .crunch.toml  Cargo.toml  crunch.toml
examples/basic-setup/schemas/crunch/: example.proto  my_event.proto
examples/basic-setup/schemas/crunch/includes/: my_include.proto
examples/basic-setup/src/: main.rs
examples/basic-setup/src/crunch/: basic.includes.my_include.rs  mod.rs  test.can.generate.output.rust.rs
examples/basic-setup/src/gencrunch/: basic.includes.my_include.rs  basic.my_event.rs  examples.example.rs  mod.rs
scripts/: db:shell.sh  local_down.sh  local_up.sh
