[workspace]
members = ["crates/*", "examples/*"]
resolver = "2"

[profile.dev.package.sqlx-macros]
opt-level = 3

[workspace.dependencies]
crunch = { path = "crates/crunch" }
crunch-traits = { path = "crates/crunch-traits" }
crunch-envelope = { path = "crates/crunch-envelope" }
crunch-in-memory = { path = "crates/crunch-in-memory" }
crunch-nats = { path = "crates/crunch-nats" }
crunch-file = {path = "crates/crunch-file"}
crunch-codegen = {path = "crates/crunch-codegen"}
crunch-postgres = {path = "crates/crunch-postgres"}

anyhow = { version = "1.0.82" }
tokio = { version = "1", features = ["full"] }
tokio-stream = {version = "0.1.15"}
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = "0.3.18"
thiserror = {version = "1.0.58"}
async-trait = "0.1.80"
uuid = { version = "1.8.0", features = ["v4", "serde"]}
futures = "0.3.28"
nats = "0.24.1"
clap = {version = "4.5.4", features = ["derive"]}
toml_edit = {version = "0.22.11",features = ["serde"]}
serde = {version = "1.0.198", features = ["derive"]}
serde_json = {version = "1.0.116"}
prost = {version  = "0.12"}
prost-types = {version = "0.12"}
prost-build = "0.12"
bytes = {version = "1.6"}
tempfile = {version = "3.10.1"}
genco = {version = "0.17.8"}
walkdir = {version = "2.5.0"}
regex = {version = "1.10.4"}
inquire = {version = "0.7.4"}
sqlx = {version = "0.7.4", default-features = false, features = ["migrate", "macros", "postgres", "runtime-tokio", "tls-rustls", "chrono", "json", "uuid" ]}
chrono = {version = "0.4.38", features = ["serde"]}

pretty_assertions = "1.4.0"