[package]
name = "crunch-codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crunch-traits.workspace = true
crunch-file.workspace = true

anyhow.workspace = true
tracing.workspace = true
tokio.workspace = true
async-trait.workspace = true
prost.workspace = true
prost-types.workspace = true
prost-build.workspace = true
bytes.workspace = true
tempfile.workspace = true
genco.workspace = true
walkdir.workspace = true
regex.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
