[package]
name = "crunch-envelope"
version = "0.1.0"
edition = "2021"

[features]
default = ["proto"]
json = ["dep:serde", "dep:serde_json", "dep:base64"]
proto = ["dep:prost", "dep:prost-types", "dep:bytes"]
capnp = ["dep:capnp"]

[dependencies]
capnp = { version = "0.18.1",optional = true}
thiserror.workspace = true

# Json
serde = { version = "1.0.188" ,optional = true, features = ["derive"] }
serde_json = {version = "1.0.107",optional = true}
base64 = {version = "0.21.4",optional = true}

# Proto
prost = {workspace = true, optional = true}
prost-types = {workspace = true, optional = true}
bytes = {workspace = true, optional = true}

[build-dependencies]
capnpc = "0.18.0"
prost-build = "0.14"

[dev-dependencies]
criterion = { version = "0.5" }