[package]
name = "crunch-nodata"
version = "0.1.0"
edition = "2021"

[dependencies]
crunch-traits.workspace = true

prost.workspace = true
prost-types.workspace = true
bytes.workspace = true
tonic.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio.workspace = true
thiserror.workspace = true
async-trait.workspace = true
futures.workspace = true
