[package]
name = "crunch-postgres"
version = "0.1.0"
edition = "2021"

 
[dependencies]
crunch-traits.workspace = true
crunch-envelope.workspace = true

anyhow.workspace = true
tracing.workspace = true
tokio.workspace = true
thiserror.workspace = true
async-trait.workspace = true
futures.workspace = true
uuid.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio-stream = {workspace = true, features = ["sync"]}