[package]
name = "crunch"
version = "0.1.0"
edition = "2021"

[dependencies]
crunch-envelope.workspace = true
crunch-in-memory = { workspace = true, optional = true }
crunch-traits.workspace = true
crunch-nats = {workspace = true,optional = true}

anyhow.workspace = true
tracing.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
thiserror.workspace = true
async-trait.workspace = true
uuid.workspace = true
futures.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true

[features]
default = ["in-memory", "traits", "nats"]
traits = []
in-memory = ["dep:crunch-in-memory"]
nats = ["dep:crunch-nats"]